GNOME Bugzilla – Bug 709104
network: Destroy connection row widget when connection is removed
Last modified: 2013-10-01 13:11:59 UTC
Fixes the crash reported in https://bugzilla.redhat.com/show_bug.cgi?id=981947 .
Created attachment 256094 [details] [review] network: Destroy connection row widget when connection is removed Otherwise all sorts of crashes may happen if it's interacted with.
Review of attachment 256094 [details] [review]: ::: panels/network/net-device-wifi.c @@ +1614,3 @@ + g_signal_connect (G_OBJECT (connection), "removed", + G_CALLBACK (connection_removed), row); + g_object_weak_ref (G_OBJECT (row), row_finalized, connection); g_signal_connect_object() ?
Created attachment 256100 [details] [review] network: Destroy connection row widget when connection is removed -- (In reply to comment #2) > g_signal_connect_object() ? Of course, duh
Review of attachment 256100 [details] [review]: ++
Attachment 256100 [details] pushed as 22ff598 - network: Destroy connection row widget when connection is removed