network: Destroy connection row widget when connection is removed

Otherwise all sorts of crashes may happen if it's interacted with.

https://bugzilla.gnome.org/show_bug.cgi?id=709104